--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   Qwiet-Static-Analysis:
-    # runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/dotnet/sdk:latest
 
