--- a/.github/workflows/markdownlint.yml
+++ b/.github/workflows/markdownlint.yml
@@ -1,26 +1,26 @@
-name: Markdownlint
+# name: Markdownlint
 
-permissions:
-  contents: read
+# permissions:
+#   contents: read
 
-# run even on changes without markdown changes, so that we can
-# make it in GitHub a required check for PR's
-on:
-  pull_request:
+# # run even on changes without markdown changes, so that we can
+# # make it in GitHub a required check for PR's
+# on:
+#   pull_request:
 
-jobs:
-  lint:
+# jobs:
+#   lint:
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 16.x
-    - name: Run Markdownlint
-      run: |
-        echo "::add-matcher::.github/workflows/markdownlint-problem-matcher.json"
-        npm i -g markdownlint-cli
-        markdownlint --ignore '.dotnet/' '**/*.md'
+#     steps:
+#     - uses: actions/checkout@v4
+#     - name: Use Node.js
+#       uses: actions/setup-node@v4
+#       with:
+#         node-version: 16.x
+#     - name: Run Markdownlint
+#       run: |
+#         echo "::add-matcher::.github/workflows/markdownlint-problem-matcher.json"
+#         npm i -g markdownlint-cli
+#         markdownlint --ignore '.dotnet/' '**/*.md'
