--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"    
+
     # - name: Download ShiftLeft CLI
     #   run: |
     #     curl https://cdn.shiftleft.io/download/sl > ./sl && chmod a+rx ./sl 
@@ -22,7 +27,7 @@ jobs:
     # - name: Run sl analyze
     #   shell: bash
     #   run: |
-    #     ./sl analyze --verbose --app ${GITHUB_REPOSITORY#*/} --tag branch=${{ github.head_ref || steps.extract_branch.outputs.branch }} . 
+    #     ./sl analyze --wait --verbose --app ${GITHUB_REPOSITORY#*/} --tag branch=${{ github.head_ref || steps.extract_branch.outputs.branch }} . 
     #   env:
     #     SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
 
@@ -33,7 +38,7 @@ jobs:
 
     - name: Analyze with NextGen Static Analysis
       run: |
-        .\sl analyze --verbose --app ShiftLeftHSLGo1455-win  .
+        .\sl analyze --wait --verbose --app ShiftLeftHSLGo1455-win  .
       env:
         SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
  
