--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   Qwiet-Static-Analysis:
-    runs-on: ubiuntu-latest
+    runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/dotnet/sdk:latest
 
